Arrumando problemas de configuração
Arrumando problemas de configuração

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    "module": "esnext",
+    "moduleResolution": "bundler"
   }
 }
